# turbo-dollop

./: .gitignore  CLAUDE.md
backend/: .env.example  bulk_refresh_balance_sheet_quarterly.py  bulk_refresh_step4_annual.py  cache.py  config.py  crontab.txt  db.py  debt_metrics.py  discount_rate_config.py  financials_data.py  fmp_client.py  logging_config.py  main.py  moat.py  models.py  nightly_fundamentals_fetch.py  npl.py  pyproject.toml  recompute_ticker_scores.py  refresh.py  refresh_sp500_list.py  schemas.py  sec_edgar.py  sp500_scraper.py  step1_data.py  step2_data.py  step3_data.py  step4_data.py  step5_data.py  ticker_score.py  ticker_summary.py  ttm.py
backend/scoring/: classification.py  overall.py  series_trend.py  step1.py  step2.py  step3.py  step4.py  step5.py  test_classification.py  test_overall.py  test_step1.py  test_step2.py  test_step4.py  test_step5.py  test_trend.py  trend.py
backend/tests/: test_bulk_refresh_step4_annual.py  test_cache.py  test_debt_metrics.py  test_financials_data.py  test_fmp_client.py  test_health.py  test_logging_config.py  test_nightly_fundamentals_fetch.py  test_npl.py  test_recompute_ticker_scores.py  test_refresh.py  test_screener_endpoints.py  test_sec_edgar.py  test_sp500_scraper.py  test_step1_data.py  test_step2_data.py  test_step4_data.py  test_step5_data.py  test_ticker_score.py  test_ticker_summary.py  test_ttm.py
backend/tests/fixtures/: oxm_company_facts_sample.json  pep_company_facts_sample.json  sp500_wikipedia_sample.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
(+73 files in other folders)
